--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.309.0",
+    "plotly.js": "^3.3.0",
     "plotly.js-dist-min": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
