feat: Add Electron desktop app and fix critical bugs
- Add Electron 28.1.0 desktop application with automatic backend management
- Fix outlier detection by adding tableData dependency to useEffect
- Replace hardcoded API URLs with relative paths in 17 components
- Add CORS support for Electron origins (127.0.0.1:8000)
- Enable backend static file serving for Electron app
- Update README with Electron installation and usage instructions
- Update QUICKSTART with Electron as easiest option
- Update .gitignore to exclude debug docs, logs, and build artifacts

New Features:
- One-click desktop app launch with npm run electron
- Native window with integrated backend lifecycle management
- Cross-platform support (macOS, Windows, Linux)
- Offline-capable, no internet required

Bug Fixes:
- Outlier detection now works when loading example data
- All modules work in Electron app (API calls fixed)
- CORS errors resolved for Electron environment

Breaking Changes: None
Backwards Compatible: Yes

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,15 @@ FEATURE_*.md
 EXCEL_TABLE_IMPLEMENTATION.md
 SVG_EXPORT_IMPLEMENTATION.md
 
+# Debug and Fix Documentation (exclude from repo)
+ELECTRON_*.md
+OUTLIER_*.md
+PREPROCESSING_FIX.md
+CORS_FIX.md
+*_DEBUG_*.md
+*_FIX*.md
+*_TEST_REPORT.md
+
 # Test files and artifacts (exclude from repo)
 test_*.py
 test_*.json
@@ -57,10 +66,18 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 .vite/
+package-electron.json
 
 # Build outputs
 frontend/dist/
 frontend/build/
+dist/
+out/
+*.app/
+*.dmg
+*.exe
+*.AppImage
+*.snap
 
 # Environment
 .env
@@ -77,6 +94,7 @@ frontend/build/
 
 # Claude Code (only ignore chat history and personal settings, not commands/hooks)
 .claude/chats/
+.claude/plans/
 .claude/settings.local.json
 .claude/*roadmap*.md
 
@@ -87,6 +105,8 @@ Thumbs.db
 # Logs
 *.log
 logs/
+electron*.log
+backend*.log
 
 # Temporary files
 *.tmp
